@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 12/08/2014 ==
+Secrets: Added a feature that allows an EQ client to log in directly to World without having to enter the LoginServer, provided the 'password' field is set in WorldServer.
+
 == 12/04/2014 ==
 Kayen: Ranged attacks will now more accurately check MAX firing range, fixing the issue where you would
 hit ranged attack and nothing would happpen due to incorrect server side range checks.
